# tailscale-userspace-proxy

./: .gitignore  LICENSE  README.md  install.py  pyproject.toml
.github/workflows/: validate.yml
docs/: claude-cowork.md  non-technical-users.md  quickstart.md  security.md  ssh-through-socks.md  tailscale-auth-key.md  troubleshooting.md
examples/: compose.remote-bind.example.yaml  proxy.env  ssh_config
src/tailscale_proxy/: __init__.py  cli.py
src/tailscale_proxy/templates/: compose.yaml
tests/: test_prerequisite_prompts.py
