[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tailscale-userspace-proxy"
version = "0.1.0"
description = "Run the official Tailscale Docker image in userspace mode as a local SOCKS5/HTTP proxy for restricted environments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Carlos Gevaerd" }
]
keywords = ["tailscale", "docker", "socks5", "proxy", "userspace", "claude", "cowork"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cadugevaerd/tailscale-userspace-proxy"
Repository = "https://github.com/cadugevaerd/tailscale-userspace-proxy"
Issues = "https://github.com/cadugevaerd/tailscale-userspace-proxy/issues"

[project.scripts]
tailscale-proxy = "tailscale_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tailscale_proxy = ["templates/*.yaml"]
